--- a/style.css
+++ b/style.css
@@ -384,15 +384,18 @@
 .about{
     display: flex;
     flex-direction: column;
-    margin-right: 150px;
+    margin-right: 50px;
 }
 .aboutsection{
     display: flex;
     flex-direction: row;
+    width: 200px;
+    
 }
 .about h4{
     font-size: small;
     margin-bottom: 20px;
+    width: 200px;
 }
 .about a{
     text-decoration: none;
